--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
-    "react-bootstrap": "^2.9.1"
+    "bootstrap-icons": "^1.13.1",
+    "framer-motion": "^12.29.2",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
