--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.29.2",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
